r5q: Add fod hidl
r5q: fod: Write to brightness path directly

Change-Id: Ib71ba0e2da3d8f48219547b3b53ada4598396299

r5q: fod: Properly reset previous brightness

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -32,3 +32,8 @@ on init
 
     # Flashlight
     chown system system /sys/class/camera/flash/rear_flash
+
+on boot
+    # Fingerprint
+    chown system system /sys/class/lcd/panel/finger_mask_mode
+    chown system system /sys/class/lcd/panel/mask_brightness
