r5q: add loggy [TEMP]
Signed-off-by: Michael Benedict <michaelbt@live.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -26,3 +26,10 @@
 on init
     # Disable Encryption TEMP
     mount none /system/etc/fstab.qcom /vendor/etc/fstab.qcom bind
+
+on fs 
+# Loggy
+service loggy /system/bin/sh /system/etc/init/loggy.sh
+    class main
+    user root
+    oneshot
