--- a/light/android.hardware.light@2.0-service.r5q.rc
+++ b/light/android.hardware.light@2.0-service.r5q.rc
@@ -5,7 +5,7 @@ on init
     chmod 0660 /sys/class/backlight/panel0-backlight/brightness
     chmod 0660 /sys/class/backlight/panel0-backlight/max_brightness
 
-service light-hal-2-0 /system/bin/hw/android.hardware.light@2.0-service.r5q
+service vendor.light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service.r5q
     interface android.hardware.light@2.0::ILight default
     class hal
     user system
