--- a/fod/vendor.lineage.biometrics.fingerprint.inscreen@1.0-service.r5q.rc
+++ b/fod/vendor.lineage.biometrics.fingerprint.inscreen@1.0-service.r5q.rc
@@ -1,4 +1,4 @@
-service fingerprint-inscreen-1-0 /system/bin/hw/lineage.biometrics.fingerprint.inscreen@1.0-service.r5q
+service vendor.fingerprint-inscreen-1-0 /vendor/bin/hw/vendor.lineage.biometrics.fingerprint.inscreen@1.0-service.r5q
     interface vendor.lineage.biometrics.fingerprint.inscreen@1.0::IFingerprintInscreen default
     class hal
     user system
